<resources>
    <string name="app_name">Doze</string>

    <string name="sleep_button_text">Sleep</string>
    <string name="action_settings">Settings</string>
    <string name="snooze_text">Snooze</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="set_alarm_for_string">Set alarm for</string>
    <string name="welcome_message">Test Test</string>
    <string name="sleep_status_bar_text">%2$s of sleep</string>
    <string name="sleep_button_not_activated">Select a wake time</string>
    <string name="how_work_string">How it works</string>
    <string name="setup_button_string">Setup</string>
    <string name="status_bar_deactivated"></string>

    <string name="stats_button_text">Stats</string>
    <string name="alarm_settings_button_text">Alarm Settings</string>
</resources>
