<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_bar_wrapper"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/personal_welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="30sp"
            android:text="@string/welcome_message"
            tools:text="Welcome, Colin"
            android:textColor="@color/text_color_white"
            android:background="@color/bar_color_other"
            android:layout_centerInParent="true"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/sleep_button_bg">
                <Button android:id="@+id/sleep_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="40dp"
                        android:padding="20dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                         android:text="@string/sleep_button_text"
                        android:textSize="40sp"
                         android:textAllCaps="true"
                        android:background="@drawable/sleep_button"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/bar_color_other"
        android:gravity="center"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status_bar"
        android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6"
        android:background="@color/wake_bg_color">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/home_screen_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.35"
                    android:orientation="vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65"
                    android:orientation="horizontal"
                    android:background="@color/bar_color_other">
                    <Button android:id="@+id/bottom_how_works_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/how_work_string"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/bottom_item"/>
                    <Button  android:id="@+id/bottom_setup_button"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="@string/setup_button_string"
                             android:layout_marginTop="16dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginBottom="8dp"
                             android:background="@drawable/bottom_item"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.65"
                        android:orientation="horizontal"
                        android:background="@color/bar_color_other">
                        <Button android:id="@+id/stats_button"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/stats_button_text"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginBottom="16dp"
                                android:background="@drawable/bottom_item"/>
                        <Button  android:id="@+id/alarm_settings_button"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:text="@string/alarm_settings_button_text"
                                 android:layout_marginTop="8dp"
                                 android:layout_marginRight="10dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginBottom="16dp"
                                 android:background="@drawable/bottom_item"/>
                    </LinearLayout>
    </LinearLayout>
</LinearLayout>